...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfile">

    <Button
        android:id="@+id/savebtn"
        android:layout_width="254dp"
        android:layout_height="36dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button1"
        android:fontFamily="sans-serif"
        android:onClick="SaveUser"
        android:text="Save"
        android:textColor="@android:color/background_light" />

    <Button
        android:id="@+id/uploadbtn"
        android:layout_width="255dp"
        android:layout_height="36dp"
...
